# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-core"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Format-agnostic text scanner and attribute parser — the marque engine's front end"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[dependencies]
aho-corasick = { workspace = true }
marque-ism = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true, optional = true }
# `smallvec` lets `parse_fgi_marker` build the FGI country list inline
# (≤4 codes per CAPCO §H.7 typical) without the heap allocation an
# intermediate `Vec` would force on every acknowledged FGI marker.
# WASM-safe (pure data structure, no I/O); already a workspace dep
# via `marque-ism`.
smallvec = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

# Hot-path heap-allocation regression gate (whitepaper §3.2 / Constitution II).
#
# When enabled, `tests/alloc_budget.rs` installs a counting global
# allocator and asserts `Scanner::scan(...)` does not exceed a small
# allocation budget on a representative corpus sweep. The feature is
# OFF by default — flipping the global allocator is intrusive and we
# don't want it active for the standard test pass.
#
# CI invokes the gate as
# `cargo test -p marque-core --features count-allocs --test alloc_budget -- --test-threads=1`.
# `--test-threads=1` is mandatory: the allocation counter is process-
# wide, so parallel tests inflate each other's deltas. See the header
# docstring in `tests/alloc_budget.rs` for the full reasoning.
count-allocs = []

[lints]
workspace = true
