# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-engine"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Pipeline orchestration: core + rules → diagnostics + fixes"
repository.workspace = true
license-file = "LICENSE.md"

[[bench]]
harness = false
name = "lint_latency"

[[bench]]
harness = false
name = "linear_scaling"

[lints]
workspace = true

[dependencies]
aho-corasick = { workspace = true }
futures = { workspace = true, optional = true }
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
recoco-utils = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
humantime = { workspace = true }
insta = { workspace = true, features = ["json"] }
# path-only so `cargo publish` strips it (marque-test-utils is publish=false).
marque-test-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = ["batch"]
batch = ["dep:futures", "dep:recoco-utils", "dep:tokio"]
# Proxies to the `marque-capco` and `marque-config` gates. The engine
# itself needs a compile-time signal so it can thread the override
# through `Engine::lint_inner` / `fix_inner` (US2 / T063–T069). Must
# stay out of `default` — WASM disables it by taking engine with
# `default-features = false` (see `crates/wasm/Cargo.toml`).
corpus-override = ["marque-capco/corpus-override", "marque-config/corpus-override"]
# Enables the byte-identical CAPCO corpus equivalence harness in the
# engine's integration tests; proxies to `marque-capco/corpus-harness`.
corpus-harness = ["marque-capco/corpus-harness"]
# Enables the decoder accuracy harness; proxies to
# `marque-capco/decoder-harness`.
decoder-harness = ["marque-capco/decoder-harness"]
