# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-engine"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Pipeline orchestration: core + rules → diagnostics + fixes"
repository.workspace = true
license-file = "LICENSE.md"

[[bench]]
harness = false
name = "lint_latency"

[[bench]]
harness = false
name = "linear_scaling"

[[bench]]
harness = false
name = "deadline_overhead"

[[bench]]
harness = false
name = "decoder_trigraph_priors"

[[bench]]
harness = false
name = "decoder_10kb_rel_to_invariant"

[[bench]]
harness = false
name = "fix_throughput"

[[bench]]
harness = false
name = "fix_latency"

[[bench]]
harness = false
name = "fix_10kb"

[[bench]]
harness = false
name = "recognition_token_heavy"

[[bench]]
harness = false
name = "profile_project"

[[bench]]
harness = false
name = "closure_pass"

# Full-machine pages-per-minute throughput harness (BatchEngine). Requires
# the `batch` feature (default-on); advisory, run weekly via
# .github/workflows/throughput-weekly.yml.
[[bench]]
harness = false
name = "throughput_pages"
required-features = ["batch"]

# Phase C smoke test for engine-side decision-tracing. Gated by
# `required-features` so `cargo test` (without `--features
# decision-tracing`) skips compilation outright rather than building
# a binary with zero discoverable tests behind an inner `#![cfg]`.
[[test]]
name = "decision_tracing_smoke"
required-features = ["decision-tracing"]

[dependencies]
aho-corasick = { workspace = true }
# The engine slices pre-fix bytes at `span` and threads them into
# `AppliedFix::__engine_promote`, which hashes inline. The `blake3`
# crate is the digest type owner via
# `marque-rules`; this entry pulls the same workspace dep so the
# engine can call `blake3::hash(...)` directly when it needs to
# digest scratch buffers in the same body (Constitution V Principle V).
blake3 = { workspace = true }
futures = { workspace = true, optional = true }
futures-core = { workspace = true }
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
marque-utils = { workspace = true, optional = true }
# Constitution Principle II — Marque-owned content-bearing buffers wipe on
# drop. `FixResult.source` wraps `SecretBox<Vec<u8>>` (grep-target readout
# discipline at the public API boundary); `Engine::fix_inner`'s splice
# scratch buffers use `Zeroizing<Vec<u8>>` directly (internal-only, no
# readout discipline needed).
secrecy = { workspace = true }
# `FixIntent.feature_ids: SmallVec<[FeatureId; 4]>` is constructed in
# production code (R001 decoder-path diagnostic synthesis), so smallvec
# is a regular dependency, not dev-only.
smallvec = { workspace = true }
# `smol_str` types flow through the engine's text-correction promotion
# path (`TextCorrectionProposal` internal carrier mirroring
# `marque_rules::TextCorrection.replacement`, then on into
# `AppliedFix::__engine_promote_text_correction`). Issue #340.
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
# `web_time::Instant` re-exports `std::time::Instant` on native and
# polyfills via Performance.now() on wasm32-unknown-unknown. The
# engine's deadline check (spec 005) calls `Instant::now()` per
# candidate; without this dep, that call panics in the WASM target.
web-time = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
humantime = { workspace = true }
insta = { workspace = true, features = ["json"] }
# path-only so `cargo publish` strips it (marque-test-utils is publish=false).
marque-test-utils = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Constitution Principle II — compile-time type-pin for
# `FixResult.source: SecretSlice<u8>` in
# `tests/content_zeroize.rs`. A refactor that drifts the field
# type fails at compile time, not at integration-test runtime.
static_assertions = { workspace = true }

[features]
default = ["batch"]
batch = ["dep:futures", "dep:tokio", "dep:marque-utils", "marque-utils/concur_control"]
# Enables the engine-side threading of a `DecisionSink` through the
# evaluator (Phase C of the decision-tracing pipeline). When OFF (the
# default), the engine carries no sink field and no per-call-site emit
# branches — Constitution Principle I (SC-001 16 ms p95) is preserved
# by construction. When ON, the engine threads a caller-supplied sink
# (default `NoopSink`) through every instrumented decision point.
# Proxies to `marque-scheme/decision-tracing` for symmetry — the
# scheme feature is just a marker today, but propagating it keeps the
# feature graph consistent if scheme-side code later opts into the
# gate.
decision-tracing = ["marque-scheme/decision-tracing"]
# Enables the byte-identical CAPCO corpus equivalence harness in the
# engine's integration tests; proxies to `marque-capco/corpus-harness`.
corpus-harness = ["marque-capco/corpus-harness"]
# Proxies to the `marque-capco` and `marque-config` gates. The engine
# itself needs a compile-time signal so it can thread the override
# through `Engine::lint_inner` / `fix_inner`. Must
# stay out of `default` — WASM disables it by taking engine with
# `default-features = false` (see `crates/wasm/Cargo.toml`).
corpus-override = [
  "marque-capco/corpus-override",
  "marque-config/corpus-override"
]
# Enables the decoder accuracy harness; proxies to
# `marque-capco/decoder-harness`.
decoder-harness = ["marque-capco/decoder-harness"]

[lints]
workspace = true
