# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-ism"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "ISM vocabulary types, generated CVE enums, and Span for marque"
repository.workspace = true
license-file = "LICENSE.md"

# Published tarball contents — keep tight. ODNI schemas live in the
# `ism` and `ism-ismcat` crates from github.com/marquetools/ism-data,
# consumed as build-dependencies. Nothing under schemas/ ships in the
# tarball anymore.
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "build.rs",
  # Issue #183 PR-B: org-specific country-code extensions (built into
  # the binary at compile time). Default committed file is empty, so
  # publishing this is a no-op for upstream consumers; org forks edit
  # the file and rebuild.
  "country_extensions.toml",
  "src/**/*.rs",
]

# Schema versions pinned here — bump intentionally when ODNI publishes updates.
# `ism-schema-version` is the upstream ODNI label (the package version on the
# ODNI publication page); `ism-data-version` is the version of the ism-data
# workspace crates this build pulls schemas from (YYYYMMDD.MAJOR.PATCH where
# YYYYMMDD = ODNI snapshot date). build.rs cross-checks both against the
# vendored data at compile time.
[package.metadata.marque]
ism-schema-version = "ISM-v2022-DEC"
ism-data-version = "20230609.0.0"
ismcat-tetra-version = "2022-NOV"

[dependencies]
aho-corasick = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
ism = { workspace = true }
ism-ismcat = { workspace = true }
proptest = { workspace = true }
xmloxide = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
ism = { workspace = true }
ism-ismcat = { workspace = true }
memchr = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
