# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-ism"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "ISM vocabulary types, generated CVE enums, and Span for marque"
repository.workspace = true
license-file = "LICENSE.md"

# Published tarball contents — keep tight. ODNI schemas live in the
# `ism` and `ism-ismcat` crates from github.com/marquetools/ism-data,
# consumed as build-dependencies. Nothing under schemas/ ships in the
# tarball anymore.
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "build.rs",
  # Issue #183 PR-B: org-specific country-code extensions (built into
  # the binary at compile time). Default committed file is empty, so
  # publishing this is a no-op for upstream consumers; org forks edit
  # the file and rebuild.
  "country_extensions.toml",
  "src/**/*.rs",
]

# Schema versions pinned here — bump intentionally when ODNI publishes updates.
# `ism-schema-version` is the upstream ODNI label (the package version on the
# ODNI publication page); `ism-data-version` is the version of the ism-data
# workspace crates this build pulls schemas from (YYYYMMDD.MAJOR.PATCH where
# YYYYMMDD = ODNI snapshot date). build.rs cross-checks both against the
# vendored data at compile time.
[package.metadata.marque]
ism-schema-version = "ISM-v2022-DEC"
ism-data-version = "20230609.0.0"
ismcat-tetra-version = "2022-NOV"

[dependencies]
aho-corasick = { workspace = true }
# `jiff` is used only inside `src/date.rs` for two calls — `civil::Date::new`
# (calendar validity) and `civil::Date::days_in_month` (leap-year-aware
# month length). Both have a hand-rolled Gregorian fallback in the same
# file. Gated behind the `dates` feature: CLI (`marque`) and server
# (`marque-server`) opt in explicitly via `features = ["dates"]`; the
# workspace pin keeps `default-features = false` so the WASM artifact
# excludes jiff entirely. See issue #455.
jiff = { workspace = true, optional = true }
# `marque-scheme` provides `Scope`, which `ProjectedMarking::scope`
# carries. The consolidated plan (`docs/plans/2026-05-02-engine-refactor-consolidated.md`
# Appendix D) anticipated an `marque-ism` ↔ `marque-scheme` edge as part
# of the PR-3a/3c keystone work. Both crates remain WASM-safe; the dep
# graph stays acyclic because `marque-scheme` does NOT depend on
# `marque-ism` (it stays a domain-neutral trait surface). The PR-3c
# `FixIntent<S>` work will land its own dep changes (`marque-rules →
# marque-scheme`) without re-routing this edge.
marque-scheme = { workspace = true }
serde = { workspace = true, optional = true }
smallvec = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
ism = { workspace = true }
ism-ismcat = { workspace = true }
proptest = { workspace = true }
# Compile-time `Send + Sync` check on `CanonicalAttrs` — load-bearing
# axiom for the `Arc<Box<[CanonicalAttrs]>>` snapshot on
# `marque_rules::RuleContext.page_portions`; the
# `RuleContext: Send + Sync` HRTB pin lives in
# `crates/rules/tests/send_sync.rs`.
# The check lives in `crates/ism/tests/send_sync.rs`.
static_assertions = { workspace = true }
xmloxide = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
ism = { workspace = true }
ism-ismcat = { workspace = true }
memchr = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[features]
# `dates` (default-on, opted out by the workspace pin's
# `default-features = false`): enables the `jiff` calendar dep for
# `validate_date` and `days_in_month` in `src/date.rs`. With the feature
# off, the same two functions fall back to a hand-rolled Gregorian
# implementation (leap-year + month-length math). Public API of
# `IsmDate` is identical either way; native-parity tests catch
# divergence. CLI (`marque`) and server (`marque-server`) opt back in
# via `marque-ism = { workspace = true, features = ["dates"] }`;
# `marque-extract` and other native crates without a direct `marque-ism`
# line inherit `dates = on` through Cargo feature unification in the
# CLI / server build graph. See issue #455.
default = ["dates"]
dates = ["dep:jiff"]
serde = ["dep:serde"]

[lints]
workspace = true
