[package]
name        = "marque-capco"
description = "CAPCO rule implementations for marque, consuming generated code from marque-ism"
version = "0.1.0"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
marque-ism   = { workspace = true }
marque-rules = { workspace = true }
phf          = { workspace = true }
thiserror    = { workspace = true }
aho-corasick = { workspace = true }

[dev-dependencies]
insta             = { workspace = true }
marque-core       = { workspace = true }
marque-config     = { workspace = true }
marque-engine     = { workspace = true }
marque-test-utils = { workspace = true }
