[package]
name = "marque-capco"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "CAPCO rule implementations for marque, consuming generated code from marque-ism"
repository.workspace = true
license.workspace = true

[dependencies]
aho-corasick = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
phf = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-engine = { workspace = true }
marque-test-utils = { workspace = true }
