[package]
name        = "marque-config"
description = "Layered configuration loading for marque"
version = "0.1.0"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
marque-ism   = { workspace = true }
marque-rules = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
