[package]
name = "marque-config"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Layered configuration loading for marque"
repository.workspace = true
license.workspace = true

[dependencies]
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
