[package]
name = "marque-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Format-agnostic scanner and parser for IC classification markings"
repository.workspace = true
license.workspace = true

[dependencies]
aho-corasick = { workspace = true }
marque-ism = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
