# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Format-agnostic text scanner and attribute parser — the marque engine's front end"
repository.workspace = true
license-file = "LICENSE"

[dependencies]
aho-corasick = { workspace = true }
marque-ism = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
