[package]
name = "marque-engine"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Pipeline orchestration: core + rules → diagnostics + fixes"
repository.workspace = true
license.workspace = true

[[bench]]
harness = false
name = "lint_latency"

[[bench]]
harness = false
name = "linear_scaling"

[dependencies]
aho-corasick = { workspace = true }
futures = { workspace = true, optional = true }
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
recoco-utils = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
humantime = { workspace = true }
insta = { workspace = true, features = ["json"] }
# path-only so `cargo publish` strips it (marque-test-utils is publish=false).
marque-test-utils = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["batch"]
batch = ["dep:futures", "dep:recoco-utils", "dep:tokio"]
