# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-extract"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Document text and metadata extraction via Kreuzberg (75+ formats, OCR)"
repository.workspace = true
license-file.workspace = true

[dependencies]
futures = { workspace = true }
marque-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Kreuzberg: polyglot document intelligence — text extraction, metadata, OCR.
# https://github.com/kreuzberg-dev/kreuzberg
# TODO: confirm crate name / availability on crates.io; may require path/git dep
# kreuzberg = "0.1"

[features]
default = []
ocr = []  # enables OCR backends via Kreuzberg when available
