[package]
name = "marque-ism"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "ISM vocabulary types, generated CVE enums, and Span for marque"
repository.workspace = true
license.workspace = true

# Published tarball contents — keep tight. `build.rs` only reads the CVE XML
# files in CVE_ISM/ and the RelTo trigraph XSD in CVE_ISMCAT/CVEGenerated/.
# Everything else under schemas/ (Schematron/*.sch and *.xsl stylesheets,
# Schema/*.xsd/.rng, ISM-Rollup-v2021-NOV/, Documents/, XSPEC/) and the entire
# registers/ directory (CAPCO reference PDFs and presentations) is repo-only
# reference material — excluded because it pushes the crate past crates.io's
# 10 MiB upload limit. Expand this list when build.rs starts consuming new
# schema files.
include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "schemas/ISM-v2022-DEC/CVE_ISM/CVEnumISM*.xml",
    "schemas/ISM-v2022-DEC/CVE_ISMCAT/CVEGenerated/CVEnumISMCATRelTo.xsd",
]

# Schema version pinned here — bump intentionally when ODNI publishes updates.
# Schemas live in schemas/ISM-v<version>/
[package.metadata.marque]
ism-schema-version = "ISM-v2022-DEC"

[dependencies]
aho-corasick = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
xmloxide = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
memchr = { workspace = true }
quick-xml = { workspace = true }
toml = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
