[package]
name        = "marque-server"
description = "REST microservice exposing marque as an API"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[[bin]]
name = "marque-server"
path = "src/main.rs"

[dependencies]
marque-engine  = { workspace = true }
marque-extract = { workspace = true }
marque-config  = { workspace = true }
marque-capco   = { path = "../marque-capco" }
axum           = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
