# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-server"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "REST microservice exposing marque as an API"
repository.workspace = true
license.workspace = true

[[bin]]
name = "marque-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true, features = ["batch"] }
marque-extract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
