[package]
name        = "marque-test-utils"
description = "Shared test utilities and corpus loader for marque"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish     = false

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
