[package]
name = "marque-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared test utilities and corpus loader for marque"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
