[package]
name = "marque-test-utils"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Shared test utilities and corpus loader for marque"
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
