[package]
name        = "marque-wasm"
description = "WASM target for marque — web worker and browser integration"
version = "0.1.0"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
marque-engine = { workspace = true, default-features = false }
marque-config = { workspace = true }
marque-rules  = { workspace = true }
wasm-bindgen       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
humantime          = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default                  = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

# marque-extract intentionally excluded — format extraction is caller's
# responsibility in WASM context; core operates on pre-extracted text.

[dev-dependencies]
marque-engine = { workspace = true }
marque-config = { workspace = true }
marque-capco  = { workspace = true }
marque-rules  = { workspace = true }
serde_json    = { workspace = true }
serde         = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# wasm-opt disabled: the bundled wasm-opt binary has a compatibility issue
# with the WASM memory.copy instruction. The unoptimized artifact is ~252KB
# (well under the 1MB target), so this is acceptable for the MVP.
# Re-enable once wasm-opt is updated: wasm-opt = ["-Os"]
wasm-opt = false

[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = false
