[package]
name = "marque-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "WASM target for marque — web worker and browser integration"
repository.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
# wasm-opt disabled: the bundled wasm-opt binary has a compatibility issue
# with the WASM memory.copy instruction. The unoptimized artifact is ~252KB
# (well under the 1MB target), so this is acceptable for the MVP.
# Re-enable once wasm-opt is updated: wasm-opt = ["-Os"]
wasm-opt = false

[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
humantime = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-engine = { workspace = true, default-features = false }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

# marque-extract intentionally excluded — format extraction is caller's
# responsibility in WASM context; core operates on pre-extracted text.
