# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "WASM target for marque — web worker and browser integration"
repository.workspace = true
license-file.workspace = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# alias for release
[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = [
  # tool options:
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-gc",
  "--enable-multi-value",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-tail-call",
  "--enable-threads",
  "--enable-typed-function-references",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
humantime = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-engine = { workspace = true, default-features = false }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
wasm-bindgen = { workspace = true }

[dev-dependencies]
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

# marque-extract intentionally excluded — format extraction is caller's
# responsibility in WASM context; core operates on pre-extracted text.
